--- a/src/DemoMessenger.Api/DemoMessenger.Api.csproj
+++ b/src/DemoMessenger.Api/DemoMessenger.Api.csproj
@@ -11,5 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DemoMessenger.Domain\DemoMessenger.Domain.csproj" />
+  </ItemGroup>
+
 
 </Project>
