Projeto com masstransit

--- a/src/DemoMessenger.Api.MassTransit/appsettings.json
+++ b/src/DemoMessenger.Api.MassTransit/appsettings.json
@@ -7,8 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "RabbitMqConfig": {
-    "Host": "localhost",
-    "Queue": "messages"
+  "RabbitMqConfigMassTransit": {
+    "RabbitMqRootUri": "rabbitmq://localhost",
+    "RabbitMqUri": "rabbitmq://localhost/orderMessageQueue",
+    "UserName": "guest",
+    "Password": "guest",
+    "NotificationServiceQueue": "notification.service"
   }
 }
