alteração de usuário e senha

--- a/src/DemoMessenger.Api.MassTransit/appsettings.json
+++ b/src/DemoMessenger.Api.MassTransit/appsettings.json
@@ -10,8 +10,8 @@
   "RabbitMqConfigMassTransit": {
     "RabbitMqRootUri": "rabbitmq://localhost",
     "RabbitMqUri": "rabbitmq://localhost/orderMessageQueue",
-    "UserName": "guest",
-    "Password": "guest",
+    "UserName": "admin",
+    "Password": "admin@2021",
     "NotificationServiceQueue": "notification.service"
   }
 }
